# WHU_Final

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Justfile  README.md  default.profraw  词汇翻译表.md
cmake/: CheckLlvmCoverage.cmake
docs/: IR-Sema接口请求反馈.md  codegen-IR输入契约.md  codegen-RV32IM落地参考.md  codegen-现状盘点.md  frontend-协作说明.md  frontend-测试Bug记录与补丁.md  sema-测试Bug记录与补丁.md
docs/superpowers/plans/: 2026-06-22-ir-foundation.md  2026-06-24-mem2reg.md  2026-06-24-optim.md  2026-06-24-sema.md
docs/superpowers/specs/: 2026-06-22-toyc-compiler-design.md  2026-06-22-toyc-ir-optim-design.md
include/toyc/: codegen.h  diagnostics.h  ir.h  ir_builder.h  irgen.h  lexer.h  mem2reg.h  optim.h  options.h  riscv.h  sema.h  token.h
src/: lexer.cpp  main.cpp  token.cpp
src/codegen/: asm_writer.cpp  codegen.cpp  riscv.cpp
src/driver/: diagnostics.cpp  main.cpp  options.cpp
src/frontend/: lexer.cpp  parser.cpp
src/ir/: ir.cpp  ir_builder.cpp  irgen.cpp  mem2reg.cpp  optim.cpp
src/sema/: const_eval.cpp  sema.cpp  symbol_table.cpp
test/: sample.tc
test/codegen/: codegen_tests.cpp
test/driver/: diagnostics_tests.cpp  options_tests.cpp
test/frontend/: ast_access_tests.cpp  ast_printer_tests.cpp  ast_tests.cpp  ast_visitor_tests.cpp  lexer_tests.cpp  parser_tests.cpp  token_tests.cpp
test/ir/: ir_pipeline_tests.cpp  ir_tests.cpp
test/regression/irgen/: arith.expected  const_fold.expected  const_fold.tc  global.expected  global.tc  local_var.expected  reassign.expected  reassign.tc  unary.expected  unary.tc
test/regression/mem2reg/: run_mem2reg.cmake
test/regression/optim/: cfs.expected  cfs.tc  const_fold.expected  cse.expected  cse.tc  dead_code.expected  dead_code.tc  run_optim.cmake
test/regression/sema/: run_tests.cmake
test/regression/sema/invalid/: call_after_decl.tc  const_div_zero.tc  const_runtime_init.tc  global_runtime_init.tc  missing_return.tc  void_as_value.tc  void_return_value.tc
test/regression/sema/valid/: global_static.tc  if_else_return.tc  local_runtime_init.tc  recursive.tc  shadowing.tc  void_call_stmt.tc  while_true_return.tc
test/sema/: sema_tests.cpp
test/support/: frontend_fixture.cpp  frontend_fixture.h  ir_fixture.cpp  ir_fixture.h
